# KIS_OpenAPI_in_Rust

./: .gitignore  Cargo.toml  README.md  code_gen.py
data/: all_latte_test.csv
docs/: KIS Developers API명세서_220616.xlsx  code_gen.py
src/: cli.rs  lib.rs  main.rs
src/kis/: account.rs  api.rs  mod.rs  request.rs  ws.rs
src/trade/: mod.rs  trader.rs
