[package]
name = "stock_trader"
description = "한국투자증권 KIS Developers 트레이딩 오픈API"
authors = ["codeart <codeart@gmail.com>", "mw"]
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
name = "trade_lib"

[[bin]]
path = "src/main.rs"
name = "stock_trader"

[dependencies]
clap = "3.1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tungstenite = "0.17.2"
url = "2.2.2"
csv = "1.1"
# tokio = { version = "1", features = ["full"] }
